# par4-d1ce

./: .gitignore  README.md  app.py  demo_guide.txt  os_simulator.py  presentation_outline.md  pyproject.toml  report.md  requirements.txt  simple_os_simulator-1.0.0-py3-none-any.whl
static/: script.js  style.css
templates/: index.html
