[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-os-simulator-web"
version = "2.0.0"
description = "A beginner-friendly web-based Operating Systems simulator built with Flask and a cyberpunk dashboard UI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Flask>=3.0,<4.0",
]
authors = [
  { name = "Student Project" }
]

[tool.setuptools]
py-modules = ["app", "os_simulator"]
